# xman

./: .gitignore  CMakeLists.txt
demo/plugin1/: CMakeLists.txt  plugin1.cpp
demo/plugin2/: CMakeLists.txt  plugin2.cpp  plugin2.h
demo/plugin3/: CMakeLists.txt  plugin3.cpp  plugin3.h
demo/plugin4/: CMakeLists.txt  plugin2.h  plugin3.h  plugin4.cpp  plugin4.h
include/: load_module_helper.h  xman_linux.h  xman_linux_str.h  xman_obj_helper.h  xman_plugin.h  xman_setting.h  xman_win.h  xmanager.h
src/: main.cpp  plugin4.h  xmanager.cpp
